# juice_flutter_app

./: README.md  pubspec.yaml
ios/Runner/: AppDelegate.swift  Info.plist
juce_flutter_app/: setup_juce.sh
juce_flutter_app/android/app/: build.gradle.kts
juce_flutter_app/android/app/src/main/: AndroidManifest.xml
juce_flutter_app/android/app/src/main/kotlin/com/example/juce_flutter_app/: MainActivity.kt
juce_flutter_app/ios/Runner.xcodeproj/: project.pbxproj
juce_flutter_app/lib/: main.dart
juce_flutter_app/linux/runner/: my_application.cc
juce_flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
juce_flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
juce_flutter_app/native/android/: jni_interface.cpp
juce_flutter_app/native/ios/: AudioProcessor.h
juce_flutter_app/test/: widget_test.dart
juce_flutter_app/web/: index.html
juce_flutter_app/windows/: CMakeLists.txt
juce_flutter_app/windows/runner/: Runner.rc  main.cpp
lib/: audio_service.dart
linux/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
native/android/: CMakeLists.txt  audio_processor.cpp  audio_processor.h
native/ios/: AudioProcessor.mm
web/: manifest.json
